Fix zoom level on mobile devices - closes #117

--- a/app/styles/base-root.styl
+++ b/app/styles/base-root.styl
@@ -16,13 +16,13 @@ html
   margin 0
 
 body
-  background-color   baseBgColor
+  background-color   color-bg-base
   font-size          text-size-base
   line-height        text-line-height-base
-  color              baseTextColor
-  font-family        baseTextFont
+  color              color-text-base-phone
+  font-family        text-font-family-base
 
 @media screen-l-up
   body
     // TODO extract magic number
-    font-size 16px
+    font-size text-size-base-desktop
